# rovers

./: README.md  bootstrap.sh  rover_journal.md
depends/: CMakeLists.txt
docs/: grid55.txt  journal.md  problem_description.txt  rovers_design.docx
src/: CMakeLists.txt  rovers.cpp
src/config/: config.h.in
src/rover/: CMakeLists.txt  io.cpp  io.h  plateau.cpp  plateau.h  rover.cpp  rover.h
tests/: dummy_test.cpp  io_test.cpp  plateau_test.cpp  rover_plateau_test.cpp  rover_test.cpp
